--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "mongoose": "^8.19.3",
+    "morgan": "^1.10.1",
     "nodemon": "^3.1.11",
+    "twilio": "^5.10.5",
     "typescript": "^5.9.3"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.6",
     "@types/express": "^5.0.5",
+    "@types/morgan": "^1.9.10",
     "@types/typescript": "^2.0.0"
   }
 }
