--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon dist/app.js",
-    "compile": "tsc -w"
+    "compile": "tsc -w",
+    "begin": "node dist/app.js",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
