--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon dist/app.js",
+    "dev": "ts-node-dev --respawn --transpile-only src/app.ts",
     "compile": "tsc -w",
     "begin": "node dist/app.js",
     "build": "tsc"
@@ -20,7 +20,9 @@
     "express": "^5.1.0",
     "mongoose": "^8.19.3",
     "morgan": "^1.10.1",
+    "node-cache": "^5.1.2",
     "nodemon": "^3.1.11",
+    "ts-node-dev": "^2.0.0",
     "twilio": "^5.10.5",
     "typescript": "^5.9.3"
   },
